; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/libevent/test/extr_regress_http.c_http_large_delay_cb.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/libevent/test/extr_regress_http.c_http_large_delay_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.evhttp_request = type { i32 }
%struct.timeval = type { i32 }

@EV_TIMEOUT = common dso_local global i32 0, align 4
@http_delay_reply = common dso_local global i32 0, align 4
@delayed_client = common dso_local global i32 0, align 4
@EVREQ_HTTP_EOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evhttp_request*, i8*)* @http_large_delay_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @http_large_delay_cb(%struct.evhttp_request* %0, i8* %1) #0 {
  %3 = alloca %struct.evhttp_request*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.timeval, align 4
  store %struct.evhttp_request* %0, %struct.evhttp_request** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call i32 @evutil_timerclear(%struct.timeval* %5)
  %7 = getelementptr inbounds %struct.timeval, %struct.timeval* %5, i32 0, i32 0
  store i32 500000, i32* %7, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* @EV_TIMEOUT, align 4
  %10 = load i32, i32* @http_delay_reply, align 4
  %11 = load %struct.evhttp_request*, %struct.evhttp_request** %3, align 8
  %12 = call i32 @event_base_once(i8* %8, i32 -1, i32 %9, i32 %10, %struct.evhttp_request* %11, %struct.timeval* %5)
  %13 = load i32, i32* @delayed_client, align 4
  %14 = load i32, i32* @EVREQ_HTTP_EOF, align 4
  %15 = call i32 @evhttp_connection_fail_(i32 %13, i32 %14)
  ret void
}

declare dso_local i32 @evutil_timerclear(%struct.timeval*) #1

declare dso_local i32 @event_base_once(i8*, i32, i32, i32, %struct.evhttp_request*, %struct.timeval*) #1

declare dso_local i32 @evhttp_connection_fail_(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
